--- a/Index.html
+++ b/Index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="card">
         <img class="Profile" src="image-avatar.png" alt="Profile picture">
-        <h2>JULIES The Third</h2>
-        <p class="box01">London, United kingdom</p>
+        <h2>Lecheheb Mohamed Ame</h2>
+        <p class="box01"> Algeria, Algiers</p>
 
         <p class="box02">"Front-end developer and avid reader."</p>
         <div class="buttons">
-            <a href="#">Gi tHub</a>
-            <a href="#">Frontend mentor</a>
+            <a href="https://github.com/Amin74-b">Gi tHub</a>
+            <a href="https://www.frontendmentor.io/home">Frontend mentor</a>
             <a href="#">Linkedin</a>
             <a href="#">Twitter</a>
             <a href="#">Instagram</a>
